--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.4",
     "@types/os-utils": "0.0.1",
+    "@types/pg": "^8.6.1",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
